syntax = "proto3";

                 package itemLootTemplate;
service ItemLootTemplateService {
 rpc createItemLootTemplate (ItemLootTemplateCreateInput) returns (ItemLootTemplate) {}
rpc itemLootTemplates (findManyParams) returns (stream ItemLootTemplate) {}
rpc itemLootTemplate (ItemLootTemplateWhereUniqueInput) returns (ItemLootTemplate) {}
rpc updateItemLootTemplate (ItemLootTemplateUpdateInput) returns (ItemLootTemplate) {}
rpc deleteItemLootTemplate (ItemLootTemplateWhereUniqueInput) returns (ItemLootTemplate) {} 
 }
message ItemLootTemplateCreateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message ItemLootTemplate {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message ItemLootTemplateWhereUniqueInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message ItemLootTemplateUpdateInput {
string createdAt = 1;
string id = 2;
string updatedAt = 3;
};
message findManyParams {

};